# etl_utils

./: pyproject.toml
src/etl_utils/classes/: csv_class.py  etl_process.py
src/etl_utils/data/: csv_file_test.csv  dados.parquet
src/etl_utils/interface/: csv_testing.py
