[project]
name = "etl-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "ItaSsa",email = "itairassa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]

[tool.poetry]
packages = [{ include = "etl_utils", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
